fixed the overflow

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -27,11 +27,14 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 body {
   font-family: "Barlow", sans-serif;
   overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .header {
@@ -89,9 +92,6 @@ body {
 .typemaster__form__btn {
   flex-shrink: 0;
 }
-.typemaster__title {
-  margin-bottom: 14.2rem;
-}
 @media screen and (min-width: 610px) {
   .typemaster__title {
     margin: 0;
@@ -99,7 +99,8 @@ body {
   }
 }
 .typemaster__content {
-  display: none;
+  margin-top: 3.2rem;
+  margin-bottom: 3.2rem;
 }
 @media screen and (min-width: 610px) {
   .typemaster__content {
@@ -260,6 +261,7 @@ body {
     transform: translateX(0%);
     grid-column: 2;
     grid-row: 1;
+    border: 1px solid red;
   }
 }
 @media screen and (min-width: 1100px) {
@@ -273,6 +275,7 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  object-position: center;
 }
 .mechanical__title {
   padding-bottom: 2.4rem;
