--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -48,14 +48,14 @@
     }
   }
   &__title {
-    margin-bottom: 14.2rem;
     @media screen and (min-width: 610px) {
       margin: 0;
       width: 100%;
     }
   }
   &__content {
-    display: none;
+    margin-top: 3.2rem;
+    margin-bottom: 3.2rem;
     @media screen and (min-width: 610px) {
       display: block;
       margin-top: 3.4rem;
@@ -67,6 +67,7 @@
     padding-right: 2.4rem;
     padding-left: 2.4rem;
     padding-bottom: 6.4rem;
+    // border: 1px solid red;
     @media screen and (min-width: 610px) {
       grid-row: 1;
       padding-left: 3.9rem;
@@ -143,6 +144,7 @@
     padding-left: 2.4rem;
     grid-template-columns: 214px 1fr;
     grid-template-rows: 320px 108px;
+    // grid-auto-rows: minmax(320px, auto);
     row-gap: 0;
   }
   @media screen and (min-width: 1100px) {
@@ -192,12 +194,12 @@
     grid-column: 2;
     border-radius: 2rem;
     overflow: hidden;
-
     transform: translateX(-8%);
     @media screen and (min-width: 610px) {
       transform: translateX(0%);
       grid-column: 2;
       grid-row: 1;
+      border: 1px solid red;
     }
     @media screen and (min-width: 1100px) {
       grid-row-start: 1;
@@ -208,6 +210,7 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
+      object-position: center;
     }
   }
   &__title {
